Address PR review: fix event-store concurrency, Java 8 test API, monolith PaymentFailed event
Co-Authored-By: teddy <tedfoley7@gmail.com>